<resources>
    <string name="app_name">Connectify</string>
    <string name="sign_in">Sign in</string>
    <string name="lets_log_in_title">Lets sign you in.</string>
    <string name="sign_in_description_text">Sign in with your email and password and join us</string>
    <string name="email">Email</string>

    <string name="welcome_title">Welcome to</string>
    <string name="connectify">Connectify</string>
    <string name="description_start_page">Discover and join Israeli projects for a taste of
    cutting-edge innovation and collaborative teamwork.</string>
    <string name="sign_up">Sign up</string>
    <string name="Sign_in">Sign in</string>

    <string name="post_new_project_title">Share a post</string>
    <string name="post_new_project_text">Add the information about the project that you want to create</string>
    <string name="post">Post</string>
    <string name="project_name_title">Post Title</string>
    <string name="project_description">Post Description</string>
    <string name="project_name_hint">Enter the post title here</string>
    <string name="project_description_hint">Enter the description here</string>
    <string name="project_deadline_title">Set the expected deadline</string>
    <string name="project__availability_title">What is your availability?</string>

    <string name="develop_group">Develop Group</string>
    <string name="collage_of_management">Collage Of Management</string>
    <string name="forget_password">Forget Password?</string>
    <string name="sign_out">Sign out</string>
    <string name="dont_have_an_account">Dont have an account?</string>
    <string name="register">Register</string>
    <string name="forget_password_title">Forget Password.</string>
    <string name="instructions_forget_password">Enter your email address to initiate the password
    recovery process. We\'ll email you password reset instructions.</string>
    <string name="reset_password">Reset Password</string>
    <string name="back_to_sign_in">Back to Sign in</string>

    <string name="sign_up_group_title">Get Started</string>
    <string name="sign_up_group_sub_title">By creating a free account</string>
    <string name="user_email_title">User Email</string>

    <string name="user_name_title">user Name</string>
    <string name="institution_title">Institution</string>
    <string name="volunteer_description_title">Tell us about you</string>
    <string name="team_members_name_title">Enter teams members name</string>
    <string name="organization_name_title">Organization Name</string>
    <string name="bio_title">Bio</string>

    <string name="blank_error">Cannot be blank</string>
    <string name="email_error">Write a valid email address</string>


    <string name="password">Password</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="address">Address</string>
    <string name="create_a_free_account">create a free account</string>
    <string name="get_started">Get Started</string>
    <string name="i_m_a_group">Volunteers Group</string>
    <string name="i_m_a_organization">Organization</string>

    <string name="sign_up_as">Sign up as</string>
    <string name="user_image">User image</string>
    <string name="name">Name</string>
    <string name="image_s_post">image\'s post</string>
    <string name="feed">Feed</string>
    <string name="add_post">Add Post</string>
    <string name="map">Map</string>
    <string name="profile">Profile</string>
    <string name="edit_button">edit_button</string>
    <string name="about_us">About Us</string>
    <string name="about_project">About Project</string>
    <string name="edit_project_details">Edit Project Details</string>
    <string name="add_the_information_about_the_project_that_you_want_to_create">Add the information
    about the project that you want to create</string>
    <string name="edit_post">Update</string>
    <string name="project_name">Project Name</string>

    <string name="error_msg">One or more of the credentials you entered are incorrect. Please try
    again.</string>
    <string name="edit_group_profile_title">Edit User Details</string>
    <string name="group_profile">Update Profile</string>

    <string name="edit_organization_profile_title">Edit Organization Details</string>
    <string name="organization_profile">Update Organization</string>
    <string name="back">Back</string>
    <string name="log_out">Log Out</string>
    <string name="explore_organizations">Explore on Map</string>
    <string name="choose_on_map">choose on map</string>
    <string name="done">Done</string>
    <string name="searching_around_you">Searching around you…</string>
    <string name="back_to_profile">Back to Profile</string>
    <string name="invalid_email_address">Invalid Email Address</string>
    <string name="password_must_be_at_least_6_characters_long_and_contain_at_least_one_letter_and_one_number">Password must be at least 6 characters long and contain at least one letter and one number</string>
    <string name="field_must_be_at_least_6_characters_long_and_contain_only_letters">Field must be at least 6 characters long and contain only letters</string>
    <string name="field_must_be_at_least_3_characters_long">Field must be at least 3 characters long</string>
    <string name="invalid">Invalid %1$s</string>
    <string name="one_or_more_of_the_credentials_you_entered_are_incorrect_please_try_again">One or more of the credentials you entered are incorrect. Please try again.</string>
</resources>