<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpVolunteerFragment">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <ImageView
                android:id="@+id/back_button"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/back_arrow_icon"
                android:padding="16dp"
                android:contentDescription="Back" />

            <TextView
                android:id="@+id/sign_up_volunteer_title"
                style="@style/AppTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:text="@string/sign_up_group_title"
                android:textAppearance="@style/log_in_text"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/new_post_sub_title"
                style="@style/AppTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:gravity="center"
                android:text="@string/sign_up_group_sub_title"
                android:textAppearance="@style/sign_in_description"
                android:textStyle="bold" />

            <include
                android:id="@+id/name_volunteer"
                layout="@layout/custom_input_field_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp" />

            <include
                android:id="@+id/email_volunteer"
                layout="@layout/custom_input_field_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp" />

            <include
                android:id="@+id/institution"
                layout="@layout/custom_input_field_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp" />

            <include
                android:id="@+id/bio_volunteer"
                layout="@layout/custom_input_field_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp" />

            <include
                android:id="@+id/password_volunteer"
                layout="@layout/custom_input_field_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="189dp"
                android:layout_height="137dp"
                android:layout_gravity="center">

                <ImageView
                    android:id="@+id/volunteerImage"
                    android:layout_width="189dp"
                    android:layout_height="137dp"
                    android:src="@drawable/user_avatar"
                    android:contentDescription="@string/user_image" />

                <LinearLayout
                    android:id="@+id/signup_volunteer_loading_overlay"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#fff7ff"
                    android:gravity="center"
                    android:orientation="vertical"
                    tools:visibility="visible">

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Uploading..."
                        android:textAlignment="center" />
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <Button
                android:id="@+id/sign_up_volunteer_btn"
                style="@style/AppTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:background="@drawable/submit_form_btn"
                android:gravity="center"
                android:text="@string/sign_up"
                android:textAppearance="@style/log_in_button" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
